jEdit 4.5 version history
       (changes since jEdit 4.4)
:encoding=UTF-8:

{{{ Version 4.5pre1

Thanks to Matthieu Casanova, Dale Anson and  Matthew Gilbert for contributing to this release

{{{ API Changes
-New method TextArea.getVisibleLineText(screenLine) and
 TextArea.getVisibleLineSegment() that returns
 the visible part of the given line (Matthieu Casanova)

}}}
{{{ Editing

-Applied patch from Matthew Gilbert to add ability to increase/decrease line spacing in the text area. (#3023134, Dale Anson)

-Added jflex edit mode (Matthieu Casanova)
}}}
}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: